--- a/PumpAutomation/PumpAutomation.csproj
+++ b/PumpAutomation/PumpAutomation.csproj
@@ -56,7 +56,7 @@
     <Compile Include="AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Core\Modbus-.cs" />
+    <Compile Include="Core\Modbus.cs" />
     <Compile Include="Costumer.cs">
       <SubType>Form</SubType>
     </Compile>
