update included dll

--- a/PumpAutomation/PumpAutomation.csproj
+++ b/PumpAutomation/PumpAutomation.csproj
@@ -200,6 +200,9 @@
     <Content Include="logo.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="NextUI.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ModbusTCP\ModbusTCP.csproj">
